--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <style>
@@ -9,6 +10,7 @@
     </style>
   </head>
   <body>
-    <button id="change-color" />
+    <button id="change-color"></button>
+    <script src="popup.js"></script>
   </body>
 </html>
